documents/examples/good/06-17-function_type.latf
int g(int x) {
    return x + 1;
}

int main() {
    [(int) -> int] f = lambda (int x) -> int . x;
    f = g; // OK

    f = lambda (int x) -> int . 2 * x; // OK

    [(int) -> void] f = lambda (int x) -> void { return; }; // OK

    return 0;
}