documents/examples/bad/syntax_error.latf
int main() {
    intt x = 1;
}